--- a/blog.html
+++ b/blog.html
@@ -15,7 +15,8 @@
         <div class="blog-card">
             <h1 class="chromab-text">Blog Title - Will Richards - Week 1</h1>
             <div>
-                <p> Here's my recap for the work done this week: What is Lorem Ipsum?
+                <p> 
+                    Here's my recap for the work done this week: What is Lorem Ipsum?
                     Why do we use it?
                     There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.
                 </p>
