added missing info from Peter's summary

--- a/blog.html
+++ b/blog.html
@@ -63,6 +63,7 @@
                     <span>Screenshot of lagoon triggerfish (2019), Jacinda Shackleton, from <a class="peter" href="https://www.instagram.com/p/B6FZF-gBg7H/">https://www.instagram.com/p/B6FZF-gBg7H/</a> </span><br>
                     <br>While on break during last Wednesday’s class, I found an article on someone recreating the raindrop effect from Legend of Zelda: Tears of the Kingdom since we were working on particles in Unity to imitate rain. 
                     It was a pretty interesting breakdown of a good-looking and performant way of handling rain in Unity.
+                    <a href="https://www.yaotian-huang.com/en/ta/recreating-the-rain-drop-effect-in-the-legend-of-zelda-totk/">https://www.yaotian-huang.com/en/ta/recreating-the-rain-drop-effect-in-the-legend-of-zelda-totk/</a>
                 </p>
             </div>
         </div>
