Fixed Peter's week 2 post formatting

--- a/blog.html
+++ b/blog.html
@@ -56,12 +56,11 @@
                 <h1 class="chromab-text peter">Peter - Week 2</h1>
                 <date>2026-02-03</date>
             </div>
-            <div class = "blog-grid">
+            <div>
                 <p>
                     This week I researched some of the games which inspired our team and found some interviews and devlogs from those games’ creators, specifically “A Short Hike” and “Arctic Eggs.” 
                     Most of these resources talked about the visual design, such as rendering and texturing, but I was also curious about how these games developed the soundscapes of their environments since that was mentioned in our previous milestone meeting.
                     <br>
-                    <img src="static/images/blog/20260203-peter1.png">
                     <br>
                     From a Short Hike I read these interviews to get a good sense of the game’s development and inspirations, taking note of how a lot of the environment design was from the creator Adam Robinson-Yu(adamgryu)’s own experiences hiking around the Canadian Shield. 
                     I also found out that he previously attended the Level Up Showcase in 2015 as part of the team working on the winning game Pitfall Planet. 
@@ -73,7 +72,6 @@
                     <br>
                     <a class="peter" href="https://canadiangamedevs.com/features/interview-with-a-short-hike-creator-adam-robinson-yuhttps://www.gamedeveloper.com/business/road-to-the-igf-adam-robinson-yu-s-i-a-short-hike-i-">Interview 3 - Game Developer</a>
                     <br>
-                    <img src="static/images/blog/20260203-peter2.png">
                     <br>
                     I was more familiar with Arctic Eggs having played it and followed its development for a few months before its release in 2024 since I was a fan of the artist <a class="peter" href="https://x.com/cdbunker2?lang=en">cdbunker2’s</a> work. 
                     That game is a really cool example of using motion controls and a simple set of mechanics to create some deep gameplay, and the atmosphere is something that I still think is unmatched. 
@@ -83,6 +81,10 @@
                     <br>
                     <a class="peter" href="https://postmode.org/arctic-eggs-interview/">Interview 2 - Postmode</a>
                 </p>
+                <div  class = "blog-grid">
+                    <img src="static/images/blog/20260203-peter1.png">
+                    <img src="static/images/blog/20260203-peter2.png">
+                </div>
             </div>
         </div>
         <div class="blog-card">
@@ -193,3 +195,4 @@
 </body>
 
 </html>
+
